@@ -1,3 +1,7 @@
+2013-06-27         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* awkgram.y: Minor whitespace cleanup, remove redundant ifdef.
+
 2013-06-24         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* dfa.c (copytoks): Rewrite to call addtok_mb() directly. Avoids
